WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314533
REGRESSION(
310247@main
): UI process may hit assertIsCurrent() threading check under eventRegionForLayer()
https://bugs.webkit.org/show_bug.cgi?id=314533
Summary
REGRESSION(310247@main): UI process may hit assertIsCurrent() threading check...
Abrar Rahman Protyasha
Reported
2026-05-10 23:40:58 PDT
rdar://176158495
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-05-11 00:02:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64661
EWS
Comment 2
2026-05-11 19:08:29 PDT
Committed
313049@main
(4b909e882dde): <
https://commits.webkit.org/313049@main
> Reviewed commits have been landed. Closing PR #64661 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug